# basicLeaning

./: README.md
CppConcurrency/: CMakeLists.txt  CMakeSettings.json
CppConcurrency/CppConcurrency/: CMakeLists.txt  Chapter2.h  Listing2_1.h  Listing2_2.h  Listing2_3.h  Listing2_8.h  NOTE.h  listing2_7.h  main.cpp  scoped_thread.h
DesignPattern/: CMakeLists.txt
DesignPattern/DesignPattern/: CMakeLists.txt  DesignPattern.cpp  DesignPattern.h  singleton.cpp  singleton.h
DesignPattern/DesignPattern/AbstractFactory/: concrete_factory.h  concrete_product.h  factory.cpp  factory.h  product.h
DesignPattern/DesignPattern/BuildPattern/: builder.h  concrete_builder.h  director.h  product.h  testBuildPattern.cpp  testBuildPattern.h
DesignPattern/DesignPattern/FactoryMethodPattern/: concrete_factory.h  factory.h  product.h  testFMP.cpp
DesignPattern/DesignPattern/PrototypePattern/: concrete_prototype.h  prototype.h  testPP.cpp  testPP.h
DesignPattern/DesignPattern/SimpleFactoryPattern/: concrete_product.h  factory.h  product.h  testSFP.cpp
algorithm/: CMakeLists.txt
algorithm/algorithm/: CMakeLists.txt  algorithm.cpp  algorithm.h
networkLearningNotes/: CMakeLists.txt  CMakeSettings.json
networkLearningNotes/networkLearningNotes/: CMakeLists.txt  HandingPartialSend.h  IEEE754.cpp  broadcaster.cpp  client1.cpp  client1.h  closeandshutdown.h  getXXXXname.h  getaddrinfo.h  gethostbyname.cpp  htonfANDntohf.cpp  listener1.cpp  main.cpp  myaccept.h  mybind.h  myconnect.h  mylisten.h  myselect.cpp  mysocket.h  note.txt  pack.cpp  recvtimeout.cpp  selectServer.cpp  sendandrecv.h  sendtoandrecvfrom.h  server1.cpp  server1.h  talker1.cpp
test/: test.sln
test/test/: main.cpp  test.vcxproj
